// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageContainer matches snapshot while generating 1`] = `
<div
  class="flex flex-col gap-16"
  data-testid="thread-messages"
>
  <div
    data-testid="message-user"
  >
    Hola
  </div>
  <div
    data-is-generating="true"
    data-is-last="true"
    data-testid="message-assistant"
  >
    Respuesta IA
  </div>
</div>
`;

exports[`MessageContainer matches snapshot with empty messages 1`] = `
<div
  class="flex flex-col gap-16"
  data-testid="thread-messages"
/>
`;

exports[`MessageContainer matches snapshot with user and assistant messages 1`] = `
<div
  class="flex flex-col gap-16"
  data-testid="thread-messages"
>
  <div
    data-testid="message-user"
  >
    ¿Quién ganó?
  </div>
  <div
    data-is-generating="false"
    data-is-last="true"
    data-testid="message-assistant"
  >
    Argentina
  </div>
</div>
`;
